--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,5 @@
-<html>
-	<body>
-		<h1>Oops! Something went wrong!</h1>
-		We couldn't find the page at {{ path }}<br />
-	</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+	<h1>Oops! Something went wrong!</h1>
+	We couldn't find the page at {{ path }}<br />
+{% endblock %}
