--- a/templates/content.html
+++ b/templates/content.html
@@ -1,6 +1,5 @@
-<html>
-	<body>
-		<h1>Content Page</h1>
-		Content goes here, once there is any :)<br />
-	</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+	<h1>Content Page</h1>
+	Content goes here, once there is any :)<br />
+{% endblock %}
