--- a/templates/file.html
+++ b/templates/file.html
@@ -1,6 +1,5 @@
-<html>
-	<body>
-		<h1>File Page</h1>
-		Files go here, once there are any :) <br />
-	</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+	<h1>File Page</h1>
+	Files go here, once there are any :) <br />
+{% endblock %}
