--- a/templates/image.html
+++ b/templates/image.html
@@ -1,6 +1,5 @@
-<html>
-	<body>
-		<h1>Image Page</h1>
-		Images go here, once there are any :)<br />
-	</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+	<h1>Image Page</h1>
+	Images go here, once there are any :)<br />
+{% endblock %}
