--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,8 @@
-<html>
-	<body>
-		<h1>Hello, world</h1>
-		This is brtaylor92's web server.<br />
-		<a href='/content'>Content</a><br />
-		<a href='/file'>Files</a><br />
-		<a href='/image'>Images</a><br />
-	</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+	<h1>Hello, world</h1>
+	This is brtaylor92's web server.<br />
+	<a href='/content'>Content</a><br />
+	<a href='/file'>Files</a><br />
+	<a href='/image'>Images</a><br />
+{% endblock %}
