--- a/templates/submit.html
+++ b/templates/submit.html
@@ -1,5 +1,4 @@
-<html>
-	<body>
-		<h1>Hello {{ firstname[0] }} {{ lastname[0] }}!</h1>
-	</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+	<h1>Hello {{ firstname[0] }} {{ lastname[0] }}!</h1>
+{% endblock %}
