--- a/templates/submit.html
+++ b/templates/submit.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-	<h1>Hello {{ firstname[0] }} {{ lastname[0] }}!</h1>
+	<h1>Hello {{ firstname }} {{ lastname }}!</h1>
 {% endblock %}
