--- a/templates/form.html
+++ b/templates/form.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<h1>Form Page</h1>
 	Test this form:<br />
-	<form action='submit' method='POST'>
+	<form action='submit' method='GET'>
 		Firstname: <input type='text' name='firstname' /><br />
 		Lastname: <input type='text' name='lastname' /><br />
 		<input type='submit' name='submit' />
