Clean up template html, add unicode meta tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,5 @@
 	<a href='/content'>Content</a><br />
 	<a href='/file'>Files</a><br />
 	<a href='/image'>Images</a><br />
-	<a href='/form'>Form</a><br /<
+	<a href='/form'>Form</a><br />
 {% endblock %}
