--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 	<head>
-		<title> {{ path }} </title>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title> brtaylor92: {{ path }} </title>
 	</head>
 	<body>
 		{% block content %}
