--- a/templates/404.html
+++ b/templates/404.html
@@ -2,4 +2,5 @@
 {% block content %}
 	<h1>Oops! Something went wrong!</h1>
 	We couldn't find the page at {{ path }}<br />
+	<img src="{{ img }}", alt="404" />
 {% endblock %}
