--- a/imageapp/templates/index.html
+++ b/imageapp/templates/index.html
@@ -2,5 +2,7 @@
 
 {% block content %}
 <a href='upload'>Upload an image</a> |
-<a href='image'>Show most recent image</a>
+<a href='image'>Show most recent image</a> <br />
+Here is the most recent image: <br />
+<img width=40% src='image_raw?special=latest'/>
 {% endblock %}
