--- a/templates/index.html
+++ b/templates/index.html
@@ -6,4 +6,5 @@
 	<a href='/file'>Files</a><br />
 	<a href='/image'>Images</a><br />
 	<a href='/form'>Form</a><br />
+	<a href='/imagelist'>Image list></a><br />
 {% endblock %}
