Implement storing of images in sqlite db for imageapp

--- a/imageapp/templates/image.html
+++ b/imageapp/templates/image.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<script type="text/javascript">
+{# <script type="text/javascript">
 
 alert("something happened!");
 
@@ -9,7 +9,7 @@ confirm("may I delete all your files?");
 
 prompt("some question","defaultvalue");
 
-</script>
+</script>#}
 
 Here is your image:
 <p>
