--- a/imageapp/templates/upload2.html
+++ b/imageapp/templates/upload2.html
@@ -9,7 +9,7 @@ Filename: <input type='file' name='file'><p>
 </form>
 
 
-<h1>This is my title.</h1>
+{#<h1>This is my title.</h1>
 
 <h2>This should not go away</h2>
 
@@ -19,5 +19,5 @@ Filename: <input type='file' name='file'><p>
 
 $('h1').fadeOut(1000);
 
-</script>
+</script>#}
 {% endblock %}
